--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <nav>
             <ul>
                 <li> <a href="index.html"> Home </a></li>
-                <li> <a href="../proyecto-theoffice/pages/personajes.html"> Personajes </a> </li>
-                <li> <a href="../proyecto-theoffice/pages/fun-facts.html"> Fun Facts </a> </li>
-                <li> <a href="../proyecto-theoffice/pages/memes-falopa.html"> Memes y Falopa </a> </li>
-                <li> <a href="../proyecto-theoffice/pages/comunidad.html"> Comunidad </a> </li>
+                <li> <a href="pages/personajes.html"> Personajes </a> </li>
+                <li> <a href="pages/fun-facts.html"> Fun Facts </a> </li>
+                <li> <a href="pages/memes-falopa.html"> Memes y Falopa </a> </li>
+                <li> <a href="pages/comunidad.html"> Comunidad </a> </li>
             </ul>
         </nav>
     <!--menu de celular-->
@@ -36,10 +36,10 @@
         </a>
       
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="../proyecto-theoffice/pages/personajes.html">Personajes</a></li>
-          <li><a class="dropdown-item" href="../proyecto-theoffice/pages/fun-facts.html">Fun Facts</a></li>
-          <li><a class="dropdown-item" href="../proyecto-theoffice/pages/memes-falopa.html"> Memes y falopa </a></li>
-          <li><a class="dropdown-item" href="../proyecto-theoffice/pages/comunidad.html"> Comunidad </a></li>
+          <li><a class="dropdown-item" href="pages/personajes.html">Personajes</a></li>
+          <li><a class="dropdown-item" href="pages/fun-facts.html">Fun Facts</a></li>
+          <li><a class="dropdown-item" href="pages/memes-falopa.html"> Memes y falopa </a></li>
+          <li><a class="dropdown-item" href="pages/comunidad.html"> Comunidad </a></li>
         </ul>
       </div>
 </header>
