--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -43,8 +43,8 @@
             <h2>Les presentamos, nuestro top 5 de personajes</h2>
             <p>Es sólo una apreciación personal, ojalá termines sin mucho esfuerzo THAT'S WHAT SHE SAID</p>
     
-            <div class="contenedor-main main-personajes">
-                <div class="contenedor">
+            <div class="contenedor-main" id="main-personajes">
+                <div class="contenedor"> 
                    <h4 id="ms" >Michael Scott</h4>
                    <img id="img-ms" class="personaje-img" src="../img/michael.png" alt="Michael Scott">
                    <p id="text-ms">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod expedita atque labore eum omnis porro ipsa quos? Blanditiis, cupiditate perferendis. Autem velit ipsam sit nostrum. Esse, blanditiis? Earum, perspiciatis ex.</p>
