--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     </div>
     <div class="contenedor-video">
        <img src="img/libro.jpg" alt="Portada del libro The office: the untold story of the greatest sitcom of the 2000's">
-        <p class="texto-video"></p>
+        <p class="texto-video">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptatibus necessitatibus hic quas, ratione inventore iure minima quaerat, officia explicabo eos ab deserunt tempora molestiae. Beatae eius fugiat aut officiis.
+        </p>
     </div>
 </div>
 <div>
