--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -47,31 +47,31 @@
                 <div class="contenedor"> 
                    <h4 id="ms" >Michael Scott</h4>
                    <img id="img-ms" class="personaje-img" src="../img/michael.png" alt="Michael Scott, main character from The Office show">
-                   <p id="text-ms">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod expedita atque labore eum omnis porro ipsa quos? Blanditiis, cupiditate perferendis. Autem velit ipsam sit nostrum. Esse, blanditiis? Earum, perspiciatis ex.</p>
+                   <p id="text-ms">Steve Carell interpreta a Michael Scott desde la primera temporada hasta la séptima. Scott es, en su mayor parte, Gerente Regional de Scranton, Pensilvania, rama de la empresa de papelería Dunder Mifflin. Él es en gran parte un empleado incompetente, inepto y distrae a sus subordinados.</p>
                </div>
                <div class="contenedor">
                    <h4 id="ds">Dwight Schrute</h4>
                    <img id="img-ds" class="personaje-img" src="../img/Dwight.png" alt="Dwight Schrute, one of the most importants characters from The Office show">
-                   <p id="text-ds">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, quia at laboriosam esse reiciendis, consequatur alias dicta, labore velit provident dolor eius veniam eligendi quas inventore facere quis repellat quod.</p>
+                   <p id="text-ds">Es pueril, egoísta, engreído y narcisista y tiene una visión de sí mismo que poco o nada se corresponde con la realidad. Por momentos se hace odioso, pero lo que tiene de repulsivo también lo tiene de adorable.</p>
                </div>
                <div class="contenedor"> 
                    <h4 id="km">Kevin Malone</h4>
                    <img id="img-km" class="personaje-img" src="../img/kevin.png" alt="Kevin Malone, the dumbest chacacter from The Office show">
-                   <p id="text-km">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, molestias deleniti et asperiores est itaque molestiae totam ipsa numquam natus quaerat voluptas at, cum, officia officiis mollitia dolore sunt dicta!</p>
+                   <p id="text-km">Interpretado por el brillante Brian Baumgartner, Kevin, a diferencia de sus colegas, no tiene grandes intereses amorosos, debido a que es algo solitario y toda su vida está relacionada al trabajo... lo que es una decepción porque tampoco es bueno en lo que hace.</p>
                </div>
                <div class="contenedor">
                    <h4 id="kk">Kelly Kapoor</h4>
                    <img id="img-kk" class="personaje-img" src="../img/Kelly.jpg" alt="Kelly Kapoor, the funniest female character from The Office show">
-                   <p id="text-kk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum debitis quam nostrum labore eveniet architecto aperiam repellat magnam reprehenderit facere, ipsa, error at? Magnam repudiandae assumenda totam distinctio, iste iusto.</p>
+                   <p id="text-kk">Kelly Rajanigandha Kapoor es un personaje ficticio de la serie de televisión estadounidense The Office, interpretada por Mindy Kaling. Ella es la representante de servicio al cliente en la sucursal de Scranton de Dunder Mifflin de las temporadas 1 a 8.</p>
                </div>
                <div class="contenedor">
                    <h4 id="rh">Ryan Howard</h4>
                    <img id="img-rh" class="personaje-img" src="../img/ryan.png" alt="Ryan Howard, the most cleaver character from The Office show">
-                   <p id="text-rh">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti est sequi ullam perferendis dolorum eius delectus temporibus exercitationem quisquam officia. Tenetur autem ut cum aperiam molestiae atque, eos inventore omnis?</p>
+                   <p id="text-rh">Misteriosa y errática. Ryan tiene una vida interior preocupante, pero revela poco de sí mismo. Dos caras es un eufemismo con él. No tiene miedo de usar cualquier excusa disponible, o incluso inventar alguna sin vergüenza. Una vez se disculpó con Kelly de esta manera: “Quería decir que lo siento de Ryan Howard por tratarte mal los últimos dos años. Tenía veintitantos años y estaba pasando por muchas cosas. Creo que nunca procesé por completo el 11 de septiembre”</p>
                </div><div class="contenedor">
                    <h4 id="cb">Creed Bratton</h4>
                    <img id="img-cb" class="personaje-img" src="../img/creed.jpg" alt="Creed Bratton, the most bizare character from The Office show">
-                   <p id="text-cb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti est sequi ullam perferendis dolorum eius delectus temporibus exercitationem quisquam officia. Tenetur autem ut cum aperiam molestiae atque, eos inventore omnis?</p>
+                   <p id="text-cb"> Enigmática. Creed claramente ha vivido una vida larga y plena, incluso si apenas puede recordar nada de eso. Todavía no sabe muchos de los nombres de sus compañeros de trabajo. La mayoría de las cosas que dice son tan extrañas que solo profundizan el misterio. A pesar de todo esto, es razonablemente querido, o al menos tolerado, principalmente porque es inofensivo.</p>
                </div>
             <div>
                 <a class="boton-arriba" href="#arriba">Ir arriba</a>
