agegando lo ultimo

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 <main>
 
     <h2>Welcome to Scranton</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione qui optio velit dolorum nulla eius aut rem, quo nihil, quas quaerat consequuntur animi fuga adipisci atque dolore vero repellat earum!</p>
+    <p>Desde la mejor serie de comedia bizarra hasta fuente de inspiración para buscar el amor en el espacio de trabajo, The Office nos atraviesa como espectadores. Y no queremos dejar de formar parte de esta hermosa familia, la familia de Dunder Mifflin, en Scranton.</p>
 <div class="contenedor-main">
     <div class="contenedor-video">
         <iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/2zgV7f4s03U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-        <p class="texto-video">Con el humor al que ya nos tiene acostumbrados, compartimos un resumen de #TeLoResumo sobre los principales hilos conductores de la mejor serie de comedia del siglo. Espero que no se rompa...THAT´S WHAT SHE SAID!!</p>
+        <p class="texto-video">Con el humor al que ya nos tiene acostumbrados, compartimos un resumen de #TeLoResumo sobre los principales hilos conductores de la mejor serie de comedia del siglo. <span id="thats-what"> Espero que no se rompa...</span>THAT´S WHAT SHE SAID!!</p>
     </div>
     <div class="contenedor-video">
         <img id="podcast-img" src="img/podcast.jpg" alt="Portada del podcast An oral story of the office">
