--- a/pages/memes-falopa.html
+++ b/pages/memes-falopa.html
@@ -42,22 +42,47 @@
   
 <main>
     <h2>Memecitos</h2>
-   <div class="contenedor-main">
+    <div class="contenedor-main">
         <div class="contenedor-memes">
-            <img src="../img/memes/call-it.jpeg" alt="Kevin drops out of CPR training and asks the paramedic to pronounce him dead." class="lazyone">
-            <img src="../img/memes/jimothy.jpeg" alt="Meme of Jim Harper nicknames, upgrading the fancy level: Jim, James and Jimothy" class="jimo">
-            <img src="../img/memes/diet-coke.jpeg" alt="Meme of Michael Scott drinking a diet coke, adding a lot of sugar" class="self-liar">
-            <img src="../img/memes/delayed-work-strategy.jpeg" alt="Meme of how you have a lot of things to do but you put the The office show" class="self-liar2">
-            <img src="../img/memes/michael-britney.jpeg" alt="Michael Scott driving a red car and listening to Britney Spears" class="self-love">
-           <img src="../img/memes/own-joke-fan-michael.jpeg" alt="Michael Scott meme about laughing at his own jokes" class="self-love2">
-            <img src="../img/memes/michael-knows.jpeg" alt="Michael Scott saying that he knew exactly what to do, and then recognizing he does not have an idea of what to do, to be depper" class="knows">
-            <!-- imagenes pausadas
-            <img src="../img/memes/meme3.jpg" alt="memardo" class="memardo">
-            <img src="../img/memes/stanley-knows.jpeg" alt="staney-meme" class="staney-meme">
+        <div class="meme">
+            <img src="../img/memes/delayed-work-strategy.jpeg" alt="self-liar2" class="self-liar2">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/jimothy.jpeg" alt="jimo" class="jimo">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/diet-coke.jpeg" alt="self-liar" class="self-liar">
+        </div>
+        <div class="meme">
             <img src="../img/memes/michhhh.jpg" alt="michel-sucker" class="michel-sucker">
-            -->
+        </div>
+        <div class="meme">
+            <img src="../img/memes/meme3.jpg" alt="memardo" class="memardo">
+        </div>
+        <div class="meme">
+           <img src="../img/memes/michael-britney.jpeg" alt="michael-britney" class="britney">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/own-joke-fan-michael.jpeg" alt="own-joke-fan-michael" class="own-joke-fan-michael">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/call-it.jpeg" alt="call-it" class="call-it">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/stanley-knows.jpeg" alt="staney-meme" class="staney-meme">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/meme-dwight.jpg" alt="meme-dwight" class="meme-dwight">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/meme-math.jpg" alt="meme-math" class="meme-math">
+        </div>
+        <div class="meme">
+            <img src="../img/memes/meme-sun.png" alt="meme-sun" class="meme-sun">
+        </div>
         </div>
     </div>
+    <div>
     <div>
         <a class="boton-arriba" href="#arriba">Ir arriba</a>
     </div>
