--- a/pages/fun-facts.html
+++ b/pages/fun-facts.html
@@ -52,26 +52,25 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/meme-ms-4.jpg" class="d-block w-100" alt="...">
+            <img src="../img/fun-facts1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Los actores escribieron algunos capítulos</h5>
+              <p>Muchos miembros principales y secundarios del reparto han escrito episodios del programa, como B.J. Novak (Ryan), Paul Lieberstein (Toby), Mindy Kaling (Kelly), Steve Carell (Michael Scott) o Larry Wilmore (Sr. Brown). Al final de la serie, muchos de los actores principales se convirtieron en productores.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/meme-ms-4.jpg" class="d-block w-100" alt="...">
+            <img src="../img/fun-facts2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Total de bromas gastadas y presupuesto</h5>
+              <p>En total, la serie incluye hasta 126 bromas gastadas entre los personajes y gran parte de ellas implican a Jim y Dwight. Se estima que el personaje de Jim se pudo gastar entre siete mil y diez mil dólares bromeando.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/meme-ms-4.jpg" class="d-block w-100" alt="...">
+            <img src="../img/fun-facts3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>En la vida real</h5>
+              <p>Steve Carell (Michael) está casado con la actriz Nancy Ellen Carell, quien interpretó a Carol Stills en varios episodios de la serie.</p>
             </div>
-          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
